--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
     </section>
 
     <!-- Galerie Section -->
-    <section id="gallery" class="gallery">
-        <h2>Galerie</h2>
-        <div class="gallery-grid">
-            <img src="image1.jpg" alt="Tanz Performance 1">
-            <img src="image2.jpg" alt="Tanz Performance 2">
-            <img src="image3.jpg" alt="Tanz Performance 3">
-        </div>
-    </section>
+  <section id="gallery" class="gallery">
+    <h2>Galerie</h2>
+    <div class="gallery-grid">
+        <img src="image1.png" alt="Tanz Performance 1">
+        <img src="image2.png" alt="Tanz Performance 2">
+        <img src="image3.png" alt="Tanz Performance 3">
+    </div>
+</section>
 
     <!-- Kontakt Section -->
     <section id="contact" class="contact">
